terminando tp
